--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.py text eol=lf
 llama-2-7b.Q5_K_M.gguf filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.gguf filter=lfs diff=lfs merge=lfs -text
